Switch from tslint -> eslint + prettier

--- a/package.json
+++ b/package.json
@@ -19,21 +19,26 @@
     "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
     "clean:dist": "rimraf -fr .rts2_cache_* dist tmp 'src/**/index.ts' node_modules",
     "dist": "yarn build && yarn dist:package.json",
-    "dist:package.json": "ts-node src/create-dist-package.json.ts $npm_package_version > dist/package.json",
-    "test": "jest",
+    "dist:package.json": "ts-node publish/create-dist-package.json.ts $npm_package_version > dist/package.json",
+    "test": "mkdir -p tmp/reports && jest",
     "test:dev": "jest --watch",
-    "test:prod": "jest --silent --coverage --runInBand",
+    "test:prod": "mkdir -p tmp/reports && jest --silent --coverage --runInBand",
     "format": "prettier 'src/**/*.[jt]s' --write --list-different --loglevel warn",
-    "format:lib": "prettier 'lib/**/*.[jt]s' --write --list-different --loglevel warn",
-    "lint": "tslint -p tslint.json",
-    "lint:test": "tslint -p tslint.json src/spec/*/*.ts"
+    "format:dist": "prettier 'dist/**/*.[jt]s' --write --list-different --loglevel warn",
+    "lint": "eslint --fix src/*.ts src/calendar/**/*.ts",
+    "lint:test": "eslint --fix -c .eslintrc.spec.js src/spec/**/*.ts"
   },
   "author": "catull@gmail.com",
   "license": "BSD-2-Clause",
   "devDependencies": {
     "@types/jest": "25.2.1",
     "@types/node": "13.13.4",
+    "@typescript-eslint/eslint-plugin": "2.30.0",
+    "@typescript-eslint/parser": "2.30.0",
     "barrelsby": "2.2.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.3",
     "jest": "25.5.4",
     "jest-environment-jsdom-thirteen": "1.0.1",
     "jest-junit": "10.0.0",
@@ -42,10 +47,6 @@
     "rimraf": "3.0.2",
     "ts-jest": "25.4.0",
     "ts-node": "8.9.1",
-    "tslint": "6.1.2",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-eslint-rules": "5.4.0",
-    "tslint-sonarts": "1.9.0",
     "typescript": "3.8.3",
     "yarn": "1.22.4"
   },
@@ -53,6 +54,7 @@
     "ancestorSeparator": " › ",
     "classNameTemplate": "{classname}",
     "output": "tmp/reports/jest-junit.xml",
+    "outputName": "tmp/reports/jest-junit.xml",
     "suiteName": "jest tests",
     "suiteNameTemplate": "{filepath}",
     "titleTemplate": "{title}",
