--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
     "clean:dist": "rimraf -fr .rts2_cache_* dist tmp 'src/**/index.ts' node_modules",
     "dist": "yarn build && yarn dist:package.json",
-    "dist:package.json": "ts-node publish/create-dist-package.json.ts $npm_package_version > dist/package.json",
+    "dist:package.json": "ts-node src/create-dist-package.json.ts $npm_package_version > dist/package.json",
     "test": "mkdir -p tmp/reports && jest",
     "test:dev": "jest --watch",
     "test:prod": "mkdir -p tmp/reports && jest --silent --coverage --runInBand",
     "format": "prettier 'src/**/*.[jt]s' --write --list-different --loglevel warn",
     "format:dist": "prettier 'dist/**/*.[jt]s' --write --list-different --loglevel warn",
-    "lint": "eslint --fix src/*.ts src/calendar/**/*.ts",
+    "lint": "eslint --fix src/[ACL]*.ts src/calendar/**/*.ts",
     "lint:test": "eslint --fix -c .eslintrc.spec.js src/spec/**/*.ts"
   },
   "author": "catull@gmail.com",
