--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -44,7 +44,7 @@
   "exclude": [
     "dist",
     "node_modules",
-    "publish/create-dist-package.json.ts",
+    "src/create-dist-package.json.ts",
     "src/*.ts",
     "src/calendar/**/*.ts"
   ],
