Simplify 'build' script; make 'dist' more robust.

--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "module": "dist/index.mjs",
   "source": "src/index.ts",
   "scripts": {
-    "build": "yarn lint && yarn build:dev",
-    "build:dev": "yarn prebuild && tsc",
+    "build": "yarn prebuild && tsc",
     "prebuild": "barro .barro.config.js --write",
     "prebuild.old": "barrelsby -D -q -l all -d src -e src/spec -e create-dist",
     "clean": "rimraf -fr dist tmp",
     "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
     "clean:dist": "rimraf -fr .rts2_cache_* dist tmp 'src/**/index.ts' node_modules",
-    "dist": "yarn build && yarn dist:package.json",
+    "dist": "yarn lint && yarn build && yarn lint:test && yarn test:prod && yarn dist:package.json && yarn format:dist",
     "dist:package.json": "ts-node src/create-dist-package.json.ts $npm_package_version > dist/package.json",
     "test": "mkdir -p tmp/reports && jest",
     "test:dev": "jest --watch",
