--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "jest": "27.0.6",
-    "jest-environment-jsdom-thirteen": "1.0.1",
+    "jest-environment-jsdom": "27.0.6",
     "jest-junit": "12.2.0",
     "jest-sonar-reporter": "2.0.0",
     "prettier": "2.3.2",
@@ -65,5 +65,6 @@
     "reportFile": "jest-sonar-report.xml",
     "reportPath": "tmp/reports",
     "sonar56x": true
-  }
+  },
+  "packageManager": "yarn@3.0.0"
 }
