Added fiels to ignore for npm registry.

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,16 @@
-.flowconfig
-.prettierrc.json
+.barro.config.js
+.editorconfig
+.eslint*
+.github
+.husky
+.prettier*
 .rts2_cache_*
 .vscode
-jest.config.js
+.yarn/
+.yarnrc.yml
+jest*
 renovate.json
-src
-tsconfig.json
+tsconfig.*
 tslint.json
 yarn.lock
+
