--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,4 @@
+
 name: ci
 on:
   push:
@@ -9,28 +10,12 @@ on:
 
 jobs:
 
-  test_lint:
-    runs-on: ubuntu-latest
-    if: ${{ !github.event.created && github.repository != 'garronej/ts-ci' }}
-    steps:
-    - uses: actions/checkout@v2.3.4
-    - uses: actions/setup-node@v2.1.3
-    - uses: bahmutov/npm-install@v1
-    - name: If this step fails run 'npm run lint' and 'npm run format' then commit again.
-      run: |
-        PACKAGE_MANAGER=npm
-        if [ -f "./yarn.lock" ]; then
-            PACKAGE_MANAGER=yarn
-        fi
-        $PACKAGE_MANAGER run lint:check
-        $PACKAGE_MANAGER run format:check
   test:
     runs-on: ${{ matrix.os }}
-    needs: test_lint
     strategy:
       matrix:
-        node: [ '17', '16', '14' ]
-        os: [ macos-latest, ubuntu-latest ]
+        node: [ '16', '14' ]
+        os: [ ubuntu-latest, macos-latest ]
     name: Test with Node v${{ matrix.node }} on ${{ matrix.os }}
     steps:
     - name: Tell if project is using npm or yarn
@@ -42,15 +27,17 @@ jobs:
     - uses: actions/setup-node@v2.1.3
       with:
         node-version: ${{ matrix.node }}
-    - uses: bahmutov/npm-install@v1
     - if: steps.step1.outputs.npm_or_yarn == 'yarn'
       run: |
+        yarn install --frozen-lockfile
         yarn build
         yarn test
     - if: steps.step1.outputs.npm_or_yarn == 'npm'
       run: |
+        npm ci
         npm run build
         npm test
+
   check_if_version_upgraded:
     name: Check if version upgrade
     if: github.event_name == 'push'
@@ -71,10 +58,11 @@ jobs:
     needs: check_if_version_upgraded
     if: needs.check_if_version_upgraded.outputs.is_upgraded_version == 'true'
     steps:
-    - uses: garronej/github_actions_toolkit@v2.4
+    - uses: garronej/github_actions_toolkit@v2.2
       with:
         action_name: update_changelog
         branch: ${{ github.ref }}
+        commit_author_email: ts_ci@github.com
 
   create_github_release:
     runs-on: ubuntu-latest
@@ -118,13 +106,17 @@ jobs:
         ref: ${{ github.ref }}
     - uses: actions/setup-node@v2.1.3
       with:
-        node-version: '15'
+        node-version: '16'
         registry-url: https://registry.npmjs.org/
-    - uses: bahmutov/npm-install@v1
     - run: |
         PACKAGE_MANAGER=npm
         if [ -f "./yarn.lock" ]; then
             PACKAGE_MANAGER=yarn
+        fi
+        if [ "$PACKAGE_MANAGER" = "yarn" ]; then
+            yarn install --frozen-lockfile
+        else
+            npm ci
         fi
         $PACKAGE_MANAGER run build
     - run: npx -y -p denoify@0.6.5 denoify_enable_short_npm_import_path
@@ -144,3 +136,4 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         VERSION: ${{ needs.check_if_version_upgraded.outputs.to_version }}
+
