--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   /* Visit https://aka.ms/tsconfig.json to read more about this file */
-  "extends": "@tsconfig/recommended/tsconfig.json",
+  // "extends": "@tsconfig/recommended/tsconfig.json",
 
   "compilerOptions": {
     "allowUnreachableCode": false,
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "lib": [
-      "es2020",
+      "es2021",
       "dom",
     ],
     "listFiles": false,
@@ -16,10 +16,11 @@
     "newLine": "lf",
     "outDir": "dist/",
     "rootDir": "./src",
+    "skipLibCheck": true,
     "sourceMap": true,
     "sourceRoot": "./src",
     "strict": true,
-    "target": "es6",
+    "target": "es2021"
   },
   "exclude": [
     "dist",
