--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "sourceMap": true,
     "sourceRoot": "./src",
     "strict": true,
-    "target": "es2021"
+    "target": "es2021",
   },
   "exclude": [
     "dist",
