--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: [ '16', '14' ]
+        node: [ '18' ]
         os: [ ubuntu-latest, macos-latest ]
     name: Test with Node v${{ matrix.node }} on ${{ matrix.os }}
     steps:
