Converted project from CommonJS to ES module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,31 +5,46 @@
   "compilerOptions": {
     "allowUnreachableCode": false,
     "baseUrl": "",
+    "composite": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "importsNotUsedAsValues": "error",
+    "isolatedModules": true,
     "lib": [
-      "es2021",
+      "ESNext",
       "dom",
     ],
     "listFiles": false,
-    "module": "commonjs",
+
+    //"noUnusedLocals": true,
+    //"noUnusedParameters": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "newLine": "lf",
     "outDir": "dist/",
     "rootDir": "./src",
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "sourceMap": true,
     "sourceRoot": "./src",
     "strict": true,
-    "target": "es2021",
+    "stripInternal": true,
+    "target": "ESNext",
   },
   "exclude": [
     "dist",
     "node_modules",
-    "src/create-dist-package.json.ts",
+    "src/create-dist-package.json.mts",
     "src/spec",
   ],
   "include": [
     "src/*.ts",
     "src/calendar/**/*.ts",
+    "src/create-dist-package.json.mts",
   ]
 }
