--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,13 +2,15 @@
     "env": {
         "browser": true,
         "es2021": true,
+        "jest/globals": true,
         "node": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended",
-        "plugin:@typescript-eslint/recommended-requiring-type-checking"
+        "plugin:@typescript-eslint/recommended-requiring-type-checking",
+        "plugin:jest/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -17,7 +19,7 @@
         "project": ["tsconfig.json"]
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "jest"
     ]
 }
-
