--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
   "files": [
     "dist"
   ],
+  "type": "module",
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "typesVersions": {
+    "*": {
+      "index.d.ts": [
+        "dist/index.d.ts"
+      ]
+    }
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "umd:main": "dist/index.umd.js",
@@ -13,15 +24,14 @@
   "source": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "prebuild": "barro .barro.config.js --write",
-    "prebuild.old": "barrelsby -D -q -l all -d src -e src/spec -e create-dist",
-    "postinstall": "yarn prebuild",
+    "prebuild": "barro .barro.config.cjs --write",
+    "prebuild.old": "barrelsby -D -H -q -l all -d src -e src/spec -e create-dist",
+    "postinstall": "pnpm prebuild",
     "clean": "rimraf -fr dist tmp",
     "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
-    "clean:dist": "rimraf -fr .rts2_cache_* dist tmp 'src/**/index.ts' node_modules",
-    "dist": "yarn prebuild && yarn lint && yarn build && yarn lint:test && yarn test:prod && yarn dist:package.json && yarn format:dist",
-    "dist:package.json": "ts-node src/create-dist-package.json.ts $npm_package_version > dist/package.json",
-    "test": "mkdir -p tmp/reports && jest",
+    "dist": "pnpm prebuild && pnpm lint && pnpm lint:test && pnpm build && pnpm lint:test && pnpm test:prod && pnpm dist:package.json && pnpm format:dist",
+    "dist:package.json": "ts-node --esm src/create-dist-package.json.mts $npm_package_version > dist/package.json",
+    "test": "jest",
     "test:dev": "jest --watch",
     "test:prod": "mkdir -p tmp/reports && jest --silent --coverage --runInBand",
     "format": "prettier 'src/**/*.[jt]s' --write --loglevel warn",
@@ -41,17 +51,18 @@
     "barro": "1.2.8",
     "eslint": "8.25.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-prettier": "4.2.1",
     "jest": "29.1.2",
     "jest-environment-jsdom": "29.1.2",
     "jest-junit": "14.0.1",
     "jest-sonar-reporter": "2.0.0",
+    "pnpm": "7.29.1",
     "prettier": "2.7.1",
     "rimraf": "3.0.2",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4",
-    "yarn": "1.22.19"
+    "typescript": "4.8.4"
   },
   "jest-junit": {
     "ancestorSeparator": " › ",
