--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calendariale",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "Calendrical calculations library in TypeScript",
   "repository": "catull/calendariale",
   "files": [
@@ -23,7 +23,7 @@
   "module": "dist/index.mjs",
   "source": "src/index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p .",
     "prebuild": "barro .barro.config.cjs --write",
     "prebuild.old": "barrelsby -D -H -q -l all -d src -e src/spec -e create-dist",
     "postinstall": "pnpm prebuild",
@@ -44,25 +44,25 @@
   "author": "catull@gmail.com",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "@types/jest": "29.1.2",
-    "@types/node": "18.8.3",
-    "@typescript-eslint/eslint-plugin": "5.39.0",
-    "@typescript-eslint/parser": "5.39.0",
+    "@types/jest": "29.4.0",
+    "@types/node": "18.14.6",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
     "barro": "1.2.8",
-    "eslint": "8.25.0",
-    "eslint-config-prettier": "8.5.0",
+    "eslint": "8.35.0",
+    "eslint-config-prettier": "8.7.0",
     "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "29.1.2",
-    "jest-environment-jsdom": "29.1.2",
-    "jest-junit": "14.0.1",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "jest-junit": "15.0.0",
     "jest-sonar-reporter": "2.0.0",
     "pnpm": "7.29.1",
-    "prettier": "2.7.1",
-    "rimraf": "3.0.2",
-    "ts-jest": "29.0.3",
+    "prettier": "2.8.4",
+    "rimraf": "4.3.1",
+    "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4"
+    "typescript": "4.9.5"
   },
   "jest-junit": {
     "ancestorSeparator": " › ",
