--- a/package.json
+++ b/package.json
@@ -80,5 +80,5 @@
     "reportPath": "tmp/reports",
     "sonar56x": true
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "pnpm@7.24.2"
 }
