--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 13,
+        "ecmaVersion": "latest",
         "sourceType": "module",
         "project": ["tsconfig.json"]
     },
