Creating dist/package.json is done through src/create-dist-package.json.js; corrected references accordingly.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "clean": "rimraf -fr dist tmp",
     "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
     "dist": "pnpm prebuild && pnpm lint && pnpm lint:test && pnpm build && pnpm test:prod && pnpm dist:package.json && pnpm format:dist",
-    "dist:package.json": "ts-node --esm src/create-dist-package.json.mts $npm_package_version > dist/package.json",
+    "dist:package.json": "ts-node --esm src/create-dist-package.json.js $npm_package_version > dist/package.json",
     "test": "jest",
     "test:dev": "jest --watch",
     "test:prod": "mkdir -p tmp/reports && jest --silent --coverage --runInBand",
