--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "format": "prettier 'src/**/*.[jt]s' --write --loglevel warn",
     "format:check": "prettier 'src/**/*.[jt]s' --list-different --loglevel warn",
     "format:dist": "prettier 'dist/**/*.[jt]s' --write --list-different --loglevel warn",
-    "lint": "eslint --fix src/[ACL]*.ts src/calendar/**/*.ts",
-    "lint:check": "eslint src/[ACL]*.ts src/calendar/**/*.ts",
+    "lint": "eslint --fix src/*.ts src/calendar/**/*.ts",
+    "lint:check": "eslint src/*.ts src/calendar/**/*.ts",
     "lint:test": "eslint --fix -c .eslintrc.spec.json src/spec/**/*.ts"
   },
   "author": "catull@gmail.com",
