--- a/package.json
+++ b/package.json
@@ -25,29 +25,43 @@
     "test:dev": "vitest --watch",
     "test:prod": "vitest --run --silent --coverage",
     "format": "prettier 'src/**/*.[jt]s' --write --log-level warn",
+    "format:test": "prettier 'src/spec/**/*.test.ts' --write --log-level warn",
     "format:check": "prettier 'src/**/*.[jt]s' --list-different --log-level warn",
     "format:dist": "prettier 'dist/**/*.[jt]s' --write --list-different --log-level warn",
-    "lint": "eslint --fix src/*.ts src/calendar/**/*.ts",
-    "lint:check": "eslint src/*.ts src/calendar/**/*.ts",
-    "lint:test": "eslint --fix -c .eslintrc.spec.json src/spec/**/*.ts"
+    "lint": "eslint --fix src/*.ts src/**/*.ts",
+    "lint:check": "eslint src/*.ts src/**/*.ts",
+    "lint:test": "eslint --fix src/spec/**/*.ts"
   },
   "author": "catull@gmail.com",
   "license": "BSD-2-Clause",
   "devDependencies": {
+    "@eslint/eslintrc": "3.0.2",
+    "@eslint/js": "9.0.0",
     "@types/node": "20.12.7",
-    "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
     "@vitest/coverage-v8": "1.5.0",
     "barro": "1.2.8",
-    "eslint": "8.57.0",
+    "eslint": "9.0.0",
+    "eslint-config-love": "47.0.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-deprecation": "2.0.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-eslint-plugin": "6.0.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "48.2.3",
+    "eslint-plugin-n": "17.2.0",
     "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-vitest": "0.4.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-simple-import-sort": "12.1.0",
+    "eslint-plugin-unicorn": "52.0.0",
+    "eslint-plugin-vitest": "0.5.2",
+    "globals": "15.0.0",
     "happy-dom": "14.7.1",
-    "pnpm": "8.15.6",
+    "pnpm": "8.15.7",
     "prettier": "3.2.5",
     "rimraf": "5.0.5",
     "typescript": "5.4.5",
+    "typescript-eslint": "7.6.0",
     "vite": "5.2.8",
     "vitest": "1.5.0"
   },
