--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "@eslint/eslintrc": "3.0.2",
-    "@eslint/js": "9.1.1",
-    "@types/node": "20.12.7",
-    "@typescript-eslint/parser": "7.7.1",
-    "@vitest/coverage-v8": "1.5.2",
+    "@eslint/js": "9.2.0",
+    "@types/node": "20.12.8",
+    "@typescript-eslint/parser": "7.8.0",
+    "@vitest/coverage-v8": "1.6.0",
     "barro": "1.2.8",
-    "eslint": "9.1.1",
+    "eslint": "9.2.0",
     "eslint-config-love": "47.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-deprecation": "2.0.0",
@@ -49,21 +49,21 @@
     "eslint-plugin-eslint-plugin": "6.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsdoc": "48.2.3",
-    "eslint-plugin-n": "17.3.1",
+    "eslint-plugin-n": "17.4.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-simple-import-sort": "12.1.0",
     "eslint-plugin-unicorn": "52.0.0",
     "eslint-plugin-vitest": "0.5.4",
-    "globals": "15.0.0",
+    "globals": "15.1.0",
     "happy-dom": "14.7.1",
     "pnpm": "9.0.6",
     "prettier": "3.2.5",
     "rimraf": "5.0.5",
     "typescript": "5.4.5",
-    "typescript-eslint": "7.7.1",
-    "vite": "5.2.10",
-    "vitest": "1.5.2"
+    "typescript-eslint": "7.8.0",
+    "vite": "5.2.11",
+    "vitest": "1.6.0"
   },
-  "packageManager": "pnpm@${npm_package_devDependencies_pnpm}"
+  "packageManager": "pnpm@9.0.6"
 }
