--- a/package.json
+++ b/package.json
@@ -18,50 +18,30 @@
     "prebuild.old": "barrelsby -D -H -q -l all -d src -e src/spec -e create-dist",
     "postinstall": "pnpm prebuild",
     "clean": "rimraf -fr dist tmp",
-    "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
-    "dist": "pnpm prebuild && pnpm lint && pnpm lint:test && pnpm build && pnpm test:prod && pnpm dist:package.json && pnpm format:dist",
+    "clean:real": "rimraf -fr dist tmp 'src/index.ts' 'src/calendar/index.ts' 'src/calendar/core/index.ts'",
+    "dist": "pnpm run prebuild && pnpm run lint && pnpm build && pnpm test:prod && pnpm dist:package.json && pnpm format:dist",
     "dist:package.json": "node src/create-dist-package.json.js $npm_package_version > dist/package.json",
     "test": "vitest --run",
     "test:dev": "vitest --watch",
     "test:prod": "vitest --run --silent --coverage",
-    "format": "prettier 'src/**/*.[jt]s' --write --log-level warn",
-    "format:test": "prettier 'src/spec/**/*.test.ts' --write --log-level warn",
-    "format:check": "prettier 'src/**/*.[jt]s' --list-different --log-level warn",
-    "format:dist": "prettier 'dist/**/*.[jt]s' --write --list-different --log-level warn",
-    "lint": "eslint --fix src/*.ts src/**/*.ts",
-    "lint:check": "eslint src/*.ts src/**/*.ts",
-    "lint:test": "eslint --fix src/spec/**/*.ts"
+    "format": "biome format --fix --log-level=warn 'src'",
+    "format:check": "biome format 'src'",
+    "format:dist": "biome format --fix --log-level=warn 'dist'",
+    "lint": "biome lint --fix 'src'",
+    "lint:check": "biome lint 'src'"
   },
   "author": "catull@gmail.com",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.6.0",
+    "@biomejs/biome": "1.8.3",
     "@types/node": "20.14.9",
-    "@typescript-eslint/parser": "7.15.0",
     "@vitest/coverage-v8": "1.6.0",
     "barro": "1.2.8",
-    "eslint": "9.6.0",
-    "eslint-config-love": "53.0.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-deprecation": "3.0.0",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-eslint-plugin": "6.2.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "48.5.0",
-    "eslint-plugin-n": "17.9.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-promise": "6.4.0",
-    "eslint-plugin-simple-import-sort": "12.1.1",
-    "eslint-plugin-unicorn": "54.0.0",
-    "eslint-plugin-vitest": "0.5.4",
     "globals": "15.8.0",
     "happy-dom": "14.12.3",
     "pnpm": "9.4.0",
-    "prettier": "3.3.2",
     "rimraf": "5.0.7",
     "typescript": "5.5.3",
-    "typescript-eslint": "7.15.0",
     "vite": "5.3.3",
     "vitest": "1.6.0"
   },
