--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,8 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  - push
+  - pull_request
 
 permissions:
   contents: read # to fetch code (actions/checkout)
@@ -11,8 +13,9 @@ jobs:
       fail-fast: false
       matrix:
         node:
-          - '21'
+          - '18'
           - '20'
+          - '22'
         platform:
           - macos-latest
           - ubuntu-latest
@@ -26,13 +29,11 @@ jobs:
         git config --global user.name "Carlo Dapor (bot)"
         git config --global user.email "catull@gmail.com"
     - name: Checkout Commit
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Install pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 7
+      uses: pnpm/action-setup@v4
     - name: Setup Node
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{matrix.node}}
         cache: 'pnpm'
