--- a/package.json
+++ b/package.json
@@ -34,16 +34,26 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/node": "22.13.1",
+    "@types/node": "22.13.4",
     "@vitest/coverage-v8": "3.0.5",
     "barro": "1.2.8",
-    "globals": "15.14.0",
-    "happy-dom": "16.8.1",
-    "pnpm": "10.2.0",
+    "globals": "15.15.0",
+    "happy-dom": "17.1.0",
+    "pnpm": "10.4.0",
     "rimraf": "6.0.1",
     "typescript": "5.7.3",
-    "vite": "6.0.11",
+    "vite": "6.1.0",
     "vitest": "3.0.5"
   },
-  "packageManager": "pnpm@10.2.0"
+  "packageManager": "pnpm@10.4.0",
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@biomejs/biome",
+      "esbuild"
+    ],
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "esbuild"
+    ]
+  }
 }
