Migrated to tsup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,44 +3,39 @@
   // "extends": "@tsconfig/recommended/tsconfig.json",
 
   "compilerOptions": {
+    "allowJs": true,
     "allowUnreachableCode": false,
     "baseUrl": "",
-    "composite": true,
-    "declaration": true,
-    "declarationMap": true,
+    "composite": false,
     "emitBOM": false,
     "emitDeclarationOnly": false,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "incremental": true,
+    "incremental": false,
     "isolatedModules": true,
     "lib": [
       "ESNext",
-      "dom",
     ],
     "listFiles": false,
-
-    "noUnusedLocals": true,
+    "noEmit": true,
     //"noUnusedParameters": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    
+    "noUnusedLocals": true,
     "module": "ESNext",
-    "moduleDetection": "auto",
+    "moduleDetection": "force",
     "moduleResolution": "bundler",
     "newLine": "lf",
-    "outDir": "dist/",
-    "rootDir": "./src",
-    "skipLibCheck": false,
-    "sourceMap": true,
-    "sourceRoot": "./src",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
     "strict": true,
     "stripInternal": true,
     "target": "ESNext",
     "useDefineForClassFields": true,
+    "verbatimModuleSyntax": true,
   },
   "exclude": [
     "dist",
@@ -50,7 +45,8 @@
   ],
   "include": [
     "src/*.ts",
-    "src/calendar/**/*.ts",
+    "src/calendar/core/*.ts",
+    "src/calendar/*.ts",
   ],
   "types": [
     "vitest/globals"
