--- a/package.json
+++ b/package.json
@@ -2,24 +2,44 @@
   "name": "calendariale",
   "version": "0.8.0",
   "description": "Calendrical calculations library in TypeScript",
-  "repository": "catull/calendariale",
+  "author": "catull@gmail.com",
+  "license": "BSD-2-Clause",
   "files": [
     "dist"
   ],
+  "keywords": [
+    "calendar",
+    "calendrcal calculations"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+htts://github.com/catull/calendariale.git"
+  },
+  "bugs": {
+    "url": "htts://github.com/catull/calendariale/issues"
+  },
+  "homepage": "htts://github.com/catull/calendariale",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "umd:main": "dist/index.umd.js",
   "module": "dist/index.mjs",
   "source": "src/index.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
-    "build": "tsc -p .",
+    "build:check": "tsc -p .",
+    "build": "tsup src/*.ts src/calendar/core/*.ts src/calendar/*.ts",
     "prebuild": "barro .barro.config.cjs --write",
     "prebuild.old": "barrelsby -D -H -q -l all -d src -e src/spec -e create-dist",
     "postinstall": "pnpm prebuild",
     "clean": "rimraf -fr dist tmp",
     "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
-    "dist": "pnpm prebuild && pnpm lint && pnpm lint:test && pnpm build && pnpm test:prod && pnpm dist:package.json && pnpm format:dist",
+    "check-exports": "attw --pack --profile strict --profile esm-only --ignore-rules=cjs-resolves-to-esm dist",
+    "dist": "pnpm prebuild && pnpm lint && pnpm lint:test && pnpm build:check && pnpm build && pnpm test:prod && pnpm dist:package.json && pnpm format:dist",
     "dist:package.json": "node src/create-dist-package.json.js $npm_package_version > dist/package.json",
     "test": "vitest --run",
     "test:dev": "vitest --watch",
@@ -32,11 +52,12 @@
     "lint:check": "eslint src/*.ts src/**/*.ts",
     "lint:test": "eslint --fix src/spec/**/*.ts"
   },
-  "author": "catull@gmail.com",
-  "license": "BSD-2-Clause",
   "devDependencies": {
+    "@arethetypeswrong/cli": "0.17.3",
+    "@changesets/cli": "2.27.12",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.20.0",
+    "@swc/core": "1.10.16",
     "@types/node": "22.13.4",
     "@typescript-eslint/parser": "8.24.0",
     "@vitest/coverage-v8": "3.0.5",
@@ -60,10 +81,17 @@
     "pnpm": "10.4.0",
     "prettier": "3.5.1",
     "rimraf": "6.0.1",
+    "tsup": "8.3.6",
     "typescript": "5.7.3",
     "typescript-eslint": "8.24.0",
     "vite": "6.1.0",
     "vitest": "3.0.5"
   },
-  "packageManager": "pnpm@10.4.0"
+  "packageManager": "pnpm@10.4.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "esbuild"
+    ]
+  }
 }
