--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,19 @@
-.barro.config.js
+.barro.config.cjs
 .editorconfig
 .eslint*
 .github
+.gitignore
 .husky
 .prettier*
 .rts2_cache_*
 .vscode
-.yarn/
-.yarnrc.yml
+.yarn*
+create-dist-package*
 jest*
 renovate.json
+pnpm*
 tsconfig.*
-tslint.json
-tsconfig.tsbuildinfo
+tsup.*
+vitest*
 yarn.lock
+
