--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,11 @@
 name: CI
 
 on:
-  - pull_request
-  - push
-    branches:
-      - master
+  pull_request:
+  push:
+      branches:
+        - master
+        - feature/biome
 
 permissions:
   contents: read
