--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "clean:real": "rimraf -fr dist tmp \"src/**/index.ts\"",
     "check-exports": "attw --pack --profile strict --profile esm-only --ignore-rules=cjs-resolves-to-esm --ignore-rules=unexpected-module-syntax dist/",
     "dist": "pnpm prebuild && pnpm lint && pnpm build:check && pnpm build && pnpm test:prod && pnpm dist:package.json && pnpm format:dist",
-    "dist:package.json": "node create-dist-package.json.ts $npm_package_version > dist/package.json",
+    "dist:package.json": "node create-dist-package.json.js $npm_package_version > dist/package.json",
     "test": "vitest --run",
     "test:dev": "vitest --watch",
     "test:prod": "vitest --run --silent --coverage",
@@ -57,6 +57,7 @@
     "@types/node": "22.13.4",
     "@vitest/coverage-v8": "3.0.5",
     "barro": "1.2.8",
+    "esbuild": ">=0.25.0",
     "globals": "15.15.0",
     "happy-dom": "17.1.0",
     "pnpm": "10.4.0",
