--- a/package.json
+++ b/package.json
@@ -53,15 +53,15 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "0.17.3",
-    "@changesets/cli": "2.27.12",
+    "@changesets/cli": "2.28.0",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.20.0",
-    "@swc/core": "1.10.16",
+    "@swc/core": "1.10.17",
     "@types/node": "22.13.4",
-    "@typescript-eslint/parser": "8.24.0",
+    "@typescript-eslint/parser": "8.24.1",
     "@vitest/coverage-v8": "3.0.5",
     "barro": "1.2.8",
-    "esbuild": ">=0.25.0",
+    "esbuild": "^0.25.0",
     "eslint": "9.20.1",
     "eslint-config-love": "118.0.0",
     "eslint-config-prettier": "10.0.1",
@@ -74,16 +74,16 @@
     "eslint-plugin-prettier": "5.2.3",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-simple-import-sort": "12.1.1",
-    "eslint-plugin-unicorn": "56.0.1",
+    "eslint-plugin-unicorn": "57.0.0",
     "eslint-plugin-vitest": "0.5.4",
     "globals": "15.15.0",
     "happy-dom": "17.1.0",
-    "pnpm": "10.4.0",
+    "pnpm": "10.4.1",
     "prettier": "3.5.1",
     "rimraf": "6.0.1",
     "tsup": "8.3.6",
     "typescript": "5.7.3",
-    "typescript-eslint": "8.24.0",
+    "typescript-eslint": "8.24.1",
     "vite": "6.1.0",
     "vitest": "3.0.5"
   },
