--- a/package.json
+++ b/package.json
@@ -53,15 +53,15 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "0.17.4",
-    "@changesets/cli": "2.29.0",
+    "@changesets/cli": "2.29.2",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.24.0",
     "@swc/core": "1.11.21",
     "@types/node": "22.14.1",
-    "@typescript-eslint/parser": "8.29.1",
+    "@typescript-eslint/parser": "8.30.1",
     "@vitest/coverage-v8": "3.1.1",
     "barro": "1.2.8",
-    "esbuild": "^0.25.2",
+    "esbuild": "0.25.2",
     "eslint": "9.24.0",
     "eslint-config-love": "119.0.0",
     "eslint-config-prettier": "10.1.2",
@@ -83,8 +83,8 @@
     "rimraf": "6.0.1",
     "tsup": "8.4.0",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.29.1",
-    "vite": "6.2.6",
+    "typescript-eslint": "8.30.1",
+    "vite": "6.3.1",
     "vitest": "3.1.1"
   },
   "packageManager": "pnpm@10.8.1",
