--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "0.18.2",
-    "@biomejs/biome": "2.1.3",
+    "@biomejs/biome": "2.1.4",
     "@changesets/cli": "2.29.5",
     "@swc/core": "1.13.3",
-    "@types/node": "24.1.0",
+    "@types/node": "24.2.1",
     "@vitest/coverage-v8": "3.2.4",
     "barro": "1.2.8",
     "globals": "16.3.0",
@@ -63,7 +63,7 @@
     "rimraf": "6.0.1",
     "tsup": "8.5.0",
     "typescript": "5.9.2",
-    "vite": "7.0.6",
+    "vite": "7.1.2",
     "vitest": "3.2.4"
   },
   "packageManager": "pnpm@10.14.0",
@@ -72,6 +72,9 @@
       "@biomejs/biome",
       "@swc/core",
       "esbuild"
-    ]
+    ],
+    "overrides": {
+      "tmp@<=0.2.3": ">=0.2.4"
+    }
   }
 }
