--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "build:check": "tsc -p .",
-    "build": "tsup src/*.ts src/calendar/core/*.ts src/calendar/*.ts",
+    "build": "tsdown src/*.ts src/calendar/core/*.ts src/calendar/*.ts",
     "prebuild": "barro .barro.config.cjs --write",
     "prebuild.old": "barrelsby -D -H -q -l all -d src -e src/spec -e create-dist",
     "postinstall": "pnpm prebuild",
@@ -47,43 +47,26 @@
     "format:test": "prettier 'src/spec/**/*.test.ts' --write --log-level warn",
     "format:check": "prettier 'src/**/*.[jt]s' --list-different --log-level warn",
     "format:dist": "prettier 'dist/**/*.[jt]s' --write --list-different --log-level warn",
-    "lint": "eslint --fix src/*.ts src/**/*.ts",
-    "lint:check": "eslint src/*.ts src/**/*.ts",
-    "lint:test": "eslint --fix src/spec/**/*.ts"
+    "lint": "oxlint --fix src/*.ts src/**/*.ts",
+    "lint:check": "oxlint src/*.ts src/**/*.ts",
+    "lint:test": "oxlint --fix src/spec/**/*.ts"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "0.18.2",
     "@changesets/cli": "2.29.7",
-    "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.38.0",
     "@swc/core": "1.13.20",
     "@types/node": "24.9.1",
-    "@typescript-eslint/parser": "8.46.2",
     "@vitest/coverage-v8": "4.0.3",
     "barro": "1.2.8",
     "esbuild": "0.25.11",
-    "eslint": "9.38.0",
-    "eslint-config-love": "133.0.0",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-deprecation": "3.0.0",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-eslint-plugin": "7.2.0",
-    "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-jsdoc": "61.1.9",
-    "eslint-plugin-n": "17.23.1",
-    "eslint-plugin-prettier": "5.5.4",
-    "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-simple-import-sort": "12.1.1",
-    "eslint-plugin-unicorn": "62.0.0",
-    "eslint-plugin-vitest": "0.5.4",
     "globals": "16.4.0",
     "happy-dom": "20.0.8",
+    "oxlint": "1.24.0",
     "pnpm": "10.19.0",
     "prettier": "3.6.2",
     "rimraf": "6.0.1",
-    "tsup": "8.5.0",
+    "tsdown": "0.15.10",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.2",
     "vite": "7.1.12",
     "vitest": "4.0.3"
   },
