Upgraded dependencies, general cleanup

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "happy-dom": "20.0.8",
     "pnpm": "10.19.0",
     "rimraf": "6.0.1",
-    "tsdown": "^0.15.10",
+    "tsdown": "0.15.10",
     "typescript": "5.9.3",
     "vite": "7.1.12",
     "vitest": "4.0.3"
