--- a/package.json
+++ b/package.json
@@ -51,22 +51,22 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "0.18.2",
-    "@biomejs/biome": "2.3.10",
+    "@biomejs/biome": "2.3.11",
     "@changesets/cli": "2.29.8",
-    "@swc/core": "1.15.5",
+    "@swc/core": "1.15.8",
     "@types/node": "25.0.3",
     "@vitest/coverage-v8": "4.0.16",
     "barro": "1.2.8",
-    "globals": "16.5.0",
+    "globals": "17.0.0",
     "happy-dom": "20.0.11",
-    "pnpm": "10.26.0",
+    "pnpm": "10.27.0",
     "rimraf": "6.1.2",
-    "tsdown": "0.18.0",
+    "tsdown": "0.19.0-beta.3",
     "typescript": "5.9.3",
     "vite": "7.3.0",
     "vitest": "4.0.16"
   },
-  "packageManager": "pnpm@10.26.0",
+  "packageManager": "pnpm@10.27.0",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@biomejs/biome",
