--- a/package.json
+++ b/package.json
@@ -54,19 +54,19 @@
     "@biomejs/biome": "2.3.11",
     "@changesets/cli": "2.29.8",
     "@swc/core": "1.15.8",
-    "@types/node": "25.0.3",
+    "@types/node": "25.0.5",
     "@vitest/coverage-v8": "4.0.16",
     "barro": "1.2.8",
     "globals": "17.0.0",
     "happy-dom": "20.1.0",
-    "pnpm": "10.27.0",
+    "pnpm": "10.28.0",
     "rimraf": "6.1.2",
-    "tsdown": "0.19.0-beta.4",
+    "tsdown": "0.19.0",
     "typescript": "5.9.3",
     "vite": "7.3.1",
     "vitest": "4.0.16"
   },
-  "packageManager": "pnpm@10.27.0",
+  "packageManager": "pnpm@10.28.0",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@biomejs/biome",
